# streaming-data-lake

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.design/: adtech-data-lake-streaming-platform.md  adtech-data-playground.md
airflow/: Dockerfile  requirements.txt
airflow/dags/: maintenance_dag.py  materialization_dag.py  view_deployment_dag.py
airflow/plugins/: maintenance_config.py  materialization_config.py  materialization_runner.py  view_runner.py
cloudbeaver/: initial-data.conf
diagrams/: architecture.py
iceberg/: apply_tables.py  requirements.txt  seed_dimensions.py
iceberg/tables/: bid_landscape_hourly.yml  bid_requests.yml  bid_requests_enriched.yml  bid_responses.yml  clicks.yml  dim_advertiser.yml  dim_agency.yml  dim_bidder.yml  dim_browser.yml  dim_campaign.yml  dim_creative.yml  dim_deal.yml  dim_device_os.yml  dim_device_type.yml  dim_geo.yml  dim_line_item.yml  dim_publisher.yml  dim_strategy.yml  dq_event_quality_hourly.yml  dq_rejected_events.yml  funnel_leakage_hourly.yml  hourly_funnel_by_publisher.yml  hourly_impressions_by_geo.yml  impressions.yml  materialization_watermarks.yml  (+2 more)
mock-data-gen/: Dockerfile  README.md  pyproject.toml
mock-data-gen/mock_data_gen/: config.py  dimension_mapping.py  generator.py  schemas.py
mock-data-gen/src/: config.py  generator.py  schemas.py
scripts/: clear-data.sh  maintenance.sh  materialize.sh  query-examples.sh  redeploy-sql-application.sh  redeploy-sql.sh  run-local.sh  setup.sh
superset/: setup-dashboards.py
trino/: apply_views.sh  views.sql
(+46 files in other folders)
