[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-data-gen"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka[avro]>=2.6.0",
    "faker>=22.0.0",
]

[project.scripts]
mock-data-gen = "mock_data_gen.generator:main"
